fixed bug where cards weren't stretching out correctly on a smaller screen

--- a/app/Styles/game.less
+++ b/app/Styles/game.less
@@ -22,7 +22,7 @@
 
     .CardStack {
         position: relative;
-        padding: 0px 15px 0px 15px;
+        padding: 15px 15px 15px 15px;
         display: inline-block;
     }
 
